Change CSS for each book. Add checkmark

--- a/index.html
+++ b/index.html
@@ -13,33 +13,27 @@
 </head>
 
 <body>
-    <h1>1</h1>
-    <div class="book">
-        <div class="cover">
-            <img src="assets/images/the_dark_forest.jpg">
-        </div>
-        <div class="description">
-            <p class="title">The Dark Forest<br>
-                <span class="author">Liu Cixin</span>
-                <span class="material-symbols-outlined read-checkmark">
-                    check
-                </span>
-            </p>
-        </div>
-    </div>
-    <div class="book">
-        <div class="cover">
-            <img src="assets/images/deaths_end.jpg">
-        </div>
-        <div class="description">
-            <p class="title">Death's End<br>
-                <span class="author">Liu Cixin</span>
-                <span class="material-symbols-outlined read-checkmark">
-                    check
-                </span>
-            </p>
+    <h1>Library</h1>
+    <form action="">
+        <button class="add_book">NEW BOOK</button>
+    </form>
+    <div id="library">
+        <div class="book">
+            <div class="cover">
+                <img src="assets/images/the_dark_forest.jpg">
+            </div>
+            <div class="description">
+                <div class="title">The Dark Forest</div>
+                <div class="author_read">
+                    <span class="author">Liu Cixin</span>
+                    <span class="material-symbols-outlined read-checkmark">
+                        check
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
+
 </body>
 
 </html>
