--- a/index.html
+++ b/index.html
@@ -14,11 +14,34 @@
 
 <body>
     <h1>Library</h1>
-    <form action="">
-        <button class="add_book">NEW BOOK</button>
+    <form action="" id="add_book">
+        <div>
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title">
+        </div>
+        <div>
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author">
+        </div>
+        <!-- change to input type file. -->
+        <div hidden>
+            <input type="text" id="cover" name="cover" value="">
+        </div>
+        <fieldset>
+            <legend>Did you read the book?</legend>
+            <div>
+                <label for="yes">Yes</label>
+                <input type="radio" name="read" id="yes">
+            </div>
+            <div>
+                <label for="no">No</label>
+                <input type="radio" name="read" id="no">
+            </div>
+        </fieldset>
+        <button>NEW BOOK</button>
     </form>
     <div id="library">
-        <div class="book">
+        <!-- <div class="book">
             <div class="cover">
                 <img src="assets/images/the_dark_forest.jpg">
             </div>
@@ -31,7 +54,7 @@
                     </span>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 </body>
