Add addBookToLibrary(), createBook(), and css
Now there's functionality to create a new book using the Object
constructor for the library.

There's now HTML/CSS for an option to delete a book as well.

--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
             <legend>Did you read the book?</legend>
             <div>
                 <label for="yes">Yes</label>
-                <input type="radio" name="read" id="yes">
+                <input type="radio" name="read" id="yes" value="yes">
             </div>
             <div>
                 <label for="no">No</label>
-                <input type="radio" name="read" id="no">
+                <input type="radio" name="read" id="no" value="no">
             </div>
         </fieldset>
         <button>NEW BOOK</button>
     </form>
     <div id="library">
         <!-- <div class="book">
+            <span class="material-symbols-outlined" id="x">
+                close
+            </span>
             <div class="cover">
                 <img src="assets/images/the_dark_forest.jpg">
             </div>
