Change delete span to a delete button
Ultimately, the close button will have to be a button with a form.
That way I get get and post books on a server.

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
     </form>
     <div id="library">
         <!-- <div class="book">
-            <span class="material-symbols-outlined" id="x">
-                close
-            </span>
+            <form action="">
+                <button class="material-symbols-outlined" id="x">
+                    close
+                </button>
+            </form>
             <div class="cover">
                 <img src="assets/images/the_dark_forest.jpg">
             </div>
