Divide functions into smaller parts. Change delete()
Divide functions into smaller parts to simplify and clarify code.

Now when deleting a book, the dataset.attribute value is changed for
each element on the webpage. Their new dataset.attribute value is
the same as their index number in the array.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div>
                 <label for="no">No</label>
-                <input type="radio" name="read" id="no" value="no">
+                <input type="radio" name="read" id="no" value="no" checked>
             </div>
         </fieldset>
         <button>NEW BOOK</button>
