--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="author_read">
                     <span class="author">Liu Cixin</span>
                     <span class="material-symbols-outlined read-checkmark">
-                        check
+                        toggle_off
                     </span>
                 </div>
             </div>
